# libvmod-rfc6052

./: Makefile.am  README.rst  configure.ac  vmod-rfc6052.spec
debian/: changelog  control  copyright  dirs
src/: Makefile.am  vmod_rfc6052.c  vmod_rfc6052.vcc
